--- a/client/stylesheets/app.scss
+++ b/client/stylesheets/app.scss
@@ -1,3 +1,5 @@
+$loading-font-size: 22px;
+
 @import '.meteor/local/build/programs/server/assets/packages/meteoric_ionic-sass/ionic';
 @import '.meteor/local/build/programs/server/assets/packages/meteoric_ionicons-sass/ionicons';
 
